removed more unused files

--- a/website/src/main/resources/website/singleresult.hbs
+++ b/website/src/main/resources/website/singleresult.hbs
@@ -26,8 +26,8 @@
 
 					<span class="text-muted">{{message "lang.share"}} <i class="fa fa-share-alt"></i></span>
 
-					<a target="_blank" href="http://www.facebook.com/sharer.php?u=http%3A%2F%2F{{host}}/entries/{{name.name}}" class="btn btn-social btn-sm btn-fb btn-primary"><i class="fa fa-facebook"></i> </a>
-					<a class="btn btn-social btn-sm btn-tw btn-info" target="_blank" href="https://twitter.com/intent/tweet?url=http%3A%2F%2F{{host}}/entries/{{name.name}}&amp;text=Did you know {{name.name}} means {{name.meaning}}?&amp;hashtags=YorubaNames&amp;via=YorubaNames"><i class="fa fa-twitter"></i> </a>
+					<a target="_blank" class="btn btn-social btn-sm btn-fb btn-primary" href="http://www.facebook.com/sharer.php?u=http%3A%2F%2F{{host}}/entries/{{name.name}}"><i class="fa fa-facebook"></i> </a>
+					<a target="_blank" class="btn btn-social btn-sm btn-tw btn-info" href="https://twitter.com/intent/tweet?url=http%3A%2F%2F{{host}}/entries/{{name.name}}&amp;text=Did you know {{name.name}} means {{name.meaning}}?&amp;hashtags=YorubaNames&amp;via=YorubaNames"><i class="fa fa-twitter"></i> </a>
 
 					</div>
 					
