Get current year and show in footer, instead of having an hard-coded value

--- a/website/src/main/resources/website/footer.hbs
+++ b/website/src/main/resources/website/footer.hbs
@@ -2,7 +2,7 @@
 	<div class="container">
 	  <div class="row">
 	    <div class="col-sm-4 text-left">
-	  	<p>Copyright &copy; 2016. YorubaName.com</p></div>
+	  	<p>Copyright &copy; {{year}}. YorubaName.com</p></div>
 	  	<div class="col-sm-4 text-center">
 	  		<nav class="social-links">
                 <a href="https://facebook.com/YorubaNames" target="_blank"><i class="fa fa-facebook"></i></a>
