Integragting names with the tts service

--- a/website/src/main/resources/website/singleresult.hbs
+++ b/website/src/main/resources/website/singleresult.hbs
@@ -11,12 +11,12 @@
 
 				   <h2 class="intonation" id="name-entry">{{ name.name }}</h2>
 					
-					<!--<p><strong>{{message "lang.pronounciation"}}</strong> /{{ name.pronunciation}}/ <button class="btn btn-default btn-sm" id="tts-button">
-							<i class="fa fa-volume-up" data-toggle="tooltip" data-placement="top" title="{{message "lang.play-sound"}}"></i>
+					<p><strong>{{message "lang.pronounciation"}}</strong>
+                        <button class="btn btn-default btn-sm" id="tts-button">
+							<i class="fa fa-volume-up" data-placement="top" title="{{message "lang.play-sound"}}"></i>
 						</button>
-
-						<!--span class="pull-right text-muted"><strong>{{message "lang.submitby"}}</strong> {{ name.submittedBy }}</span>
-					</p>-->
+						<!--<span> class="pull-right text-muted"><strong>{{message "lang.submitby"}}</strong> {{ name.submittedBy }}</span>-->
+					</p>
 
 					<div class="share">
 
