--- a/website/src/main/resources/website/searchresults.hbs
+++ b/website/src/main/resources/website/searchresults.hbs
@@ -19,7 +19,7 @@
                     <p>{{message "lang.entry-not-found.similar-names"}}</p>
                     {{#each names}}
                         <hr>
-                        <h4 class="strong-text intonation"><a href="/entries/{{this.name}}">{{ this.name }}</a></h4>
+                        <h4 class="strong-text intonation"><a href="/entries/{{this.name}}">{{normalize this.name}}</a></h4>
 
                         <p><strong>Brief Meaning: </strong> {{this.meaning}} </p>
 
