--- a/website/src/main/resources/website/home.hbs
+++ b/website/src/main/resources/website/home.hbs
@@ -61,7 +61,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 text-center"><h3>Our key supporters</h3></div>
-            <div class="col-sm-2 col-sm-offset-1"><a href="www.oraturelab.com" target="_blank">
+            <div class="col-sm-2 col-sm-offset-1"><a href="http://www.oraturelab.com" target="_blank">
                 <img class="img-responsive" src="/assets/img/supporters/orature_lab.png"></a>
             </div>
             <div class="col-sm-2"><a href="http://capitalsqua.re/" target="_blank">
