--- a/website/src/main/resources/website/contactus.hbs
+++ b/website/src/main/resources/website/contactus.hbs
@@ -6,60 +6,31 @@
 <!-- main-content -->
 
 <section>
-   <div class="container">
-       <div class="col-sm-3">
-       	  
-       </div>
-       <div class="col-sm-6">
-       	  <h3>Contact Information</h3>
+    <div class="container">
+        <div class="col-sm-3">
 
-       	  <p class="lead">We're easy to get through to, whether in person or by mail.</p>
-       	  
-       	  <!--form class="contact">
+        </div>
+        <div class="col-sm-6">
+            <h3>{{message "lang.contact-info"}}</h3>
 
-       	  	  <div class="form-group">
-       	  	  	<label class="required">Name</label>
-       	  	  	<input class="form-control" type="text" placeholder="Enter your name" name="name">
-       	  	  </div>
+            <p class="lead">{{message "lang.contact-info-preamble"}}</p>
 
-       	  	  <div class="form-group">
-       	  	  	<label class="required">Email</label>
-       	  	  	<input class="form-control" type="text" placeholder="Enter your email address" name="email">
-       	  	  </div>
+            <p>{{message "lang.contact-info-email-preamble"}} <a href="mailto:project@yorubaname.com">project@yorubaname.com</a></p>
+            <p>Or visit our office at YorubaName.com<br>
+                2nd Floor, The Garnet Building<br>
+                Lekki - Epe Express Road, Lekki<br>
+                Lagos 101245<br>
+                Nigeria
+            </p>
 
-       	  	  <div class="form-group">
-       	  	  	<label class="required">Subject</label>
-       	  	  	<input class="form-control" type="text" placeholder="Enter the subject of your enquiry here" name="subject">
-       	  	  </div>
+            <p class="lead">Follow us on Social Media</p>
+            <nav class="social-links">
+                <a href="https://facebook.com/YorubaNames" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://twitter.com/YorubaNames" target="_blank"><i class="fa fa-twitter"></i></a>
+            </nav>
 
-       	  	  <div class="form-group">
-       	  	  	<label class="required">Message</label>
-       	  	  	<textarea class="form-control" placeholder="Enter your message here" name="message"></textarea>
-       	  	  </div>
-
-       	  	  <div class="form-group">
-       	  	  	<button type="submit" class="btn btn-sm btn-success">Submit Message</button>
-       	  	  </div>
-
-       	  </form-->
-
-       	  
-       	  <p>You may send an email to <a href="mailto:project@yorubaname.com">project@yorubaname.com</a></p>
-          <p>Or visit our office at YorubaName.com<br>
-              2nd Floor, The Garnet Building<br>
-              Lekki - Epe Express Road, Lekki<br>
-              Lagos 101245<br>
-              Nigeria
-          </p>
-
-          <p class="lead">Follow us on Social Media</p>
-          <nav class="social-links">
-            <a href="https://facebook.com/YorubaNames" target="_blank"><i class="fa fa-facebook"></i></a>
-            <a href="https://twitter.com/YorubaNames" target="_blank"><i class="fa fa-twitter"></i></a>
-          </nav>
-
-       </div>
-   </div>
+        </div>
+    </div>
 </section>
 
 
