--- a/website/src/main/resources/website/header.hbs
+++ b/website/src/main/resources/website/header.hbs
@@ -57,13 +57,16 @@
                 </div>
                                            
                 <div class="collapse navbar-collapse navbar-main-collapse">
+                    <ul id="lang-group" class="lang-toggle nav nav-tabs navbar-right">
+                        <li id="en"><a href="?lang=en" target="_self">EN</a></li>
+                        <li id="yo"><a href="?lang=yo">YOR</a></li>
+                    </ul>
                     <ul class="nav navbar-nav navbar-right">   
                         <li><a href="/">{{message "lang.home"}}</a></li>
                         <li><a href="/about-us">{{message "lang.about"}}</a></li>
                         <li><a href="/volunteer">{{message "lang.volunteer"}}</a></li>
                         <li><a href="https://www.indiegogo.com/projects/the-yoruba-names-dictionary#/story" target="_blank">{{message "lang.donate"}}</a></li>
                         <li><a href="http://blog.yorubaname.com" target="_blank">{{message "lang.blog"}}</a></li>
-                        <!--li><a href="/login">{{message "lang.logreg"}}</a></li-->
                         <li><a href="/contact-us">{{message "lang.contact"}}</a></li>
                     </ul>
                 </div>
