pronounciation changed to pronunciation

--- a/website/src/main/resources/website/singleresult.hbs
+++ b/website/src/main/resources/website/singleresult.hbs
@@ -11,7 +11,7 @@
 
 				   <h2 class="intonation" id="name-entry">{{normalize name.name }}</h2>
 					
-					<p><strong>{{message "lang.pronounciation"}}</strong>
+					<p><strong>{{message "lang.pronunciation"}}</strong>
                         <button class="btn btn-default btn-sm" id="tts-button">
 							<i class="fa fa-volume-up" data-placement="top" title="{{message "lang.play-sound"}}"></i>
 						</button>
