Adding/updating some translations

--- a/website/src/main/resources/website/contactus.hbs
+++ b/website/src/main/resources/website/contactus.hbs
@@ -16,14 +16,14 @@
             <p class="lead">{{message "lang.contact-info-preamble"}}</p>
 
             <p>{{message "lang.contact-info-email-preamble"}} <a href="mailto:project@yorubaname.com">project@yorubaname.com</a></p>
-            <p>Or visit our office at YorubaName.com<br>
+            <p>{{message "lang.contact-info-contact-preamble"}}<br>
                 2nd Floor, The Garnet Building<br>
                 Lekki - Epe Express Road, Lekki<br>
                 Lagos 101245<br>
                 Nigeria
             </p>
 
-            <p class="lead">Follow us on Social Media</p>
+            <p class="lead">{{message "lang.social-media"}}</p>
             <nav class="social-links">
                 <a href="https://facebook.com/YorubaNames" target="_blank"><i class="fa fa-facebook"></i></a>
                 <a href="https://twitter.com/YorubaNames" target="_blank"><i class="fa fa-twitter"></i></a>
