--- a/website/src/main/resources/website/singleresult.hbs
+++ b/website/src/main/resources/website/singleresult.hbs
@@ -74,7 +74,7 @@
 
 					    <br><br>
 						<h4>{{message "lang.media-links"}}</h4>
-						<a href="{{name.media}}"></a>
+						<a href="{{name.media}}">{{name.media}}</a>
 					
 					<!-- /media -->
 
