--- a/website/src/main/resources/website/singleresult.hbs
+++ b/website/src/main/resources/website/singleresult.hbs
@@ -53,7 +53,7 @@
                     <h4>{{message "lang.videos"}}</h4>
                     {{#each name.videos}}
                         <div class="iframe-container" id="video{{@index}}">
-                            <iframe src="{{this.url}}"
+                            <iframe src="https://www.youtube.com/embed/{{this.url}}"
                                     title="{{this.caption}}" frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                     allowfullscreen></iframe>
