Fix mixed content issue

--- a/website/src/main/resources/website/header.hbs
+++ b/website/src/main/resources/website/header.hbs
@@ -25,7 +25,7 @@
     <link href="/assets/css/font-awesome.min.css" rel="stylesheet">
     <link href="/assets/css/overwrite.css" rel="stylesheet">
     <link href="/assets/css/multiple-select.css" rel="stylesheet">
-    <link href="http://fast.fonts.net/cssapi/6dc70f84-e724-4068-9f7a-797b1bf01ddb.css" rel="stylesheet">
+    <link href="//fast.fonts.net/cssapi/6dc70f84-e724-4068-9f7a-797b1bf01ddb.css" rel="stylesheet">
     <link href="/assets/css/styles.css" rel="stylesheet">
 
     <title>{{ title }}</title>
