Added the tonemarking software CTA and removed key supporter row

--- a/website/src/main/resources/website/home.hbs
+++ b/website/src/main/resources/website/home.hbs
@@ -61,18 +61,20 @@
     <!-- /llm -->
 
     <div class="container">
-        <div class="row">
-            <div class="col-sm-12 text-center"><h3>{{message "lang.key-supporters"}}</h3></div>
-            <div class="col-sm-2 col-sm-offset-3"><a href="http://www.oraturelab.com" target="_blank">
-                <img class="img-responsive" src="/assets/img/supporters/orature_lab.png"></a>
-            </div>
-            <div class="col-sm-2"><a href="http://capitalsqua.re/" target="_blank">
-                <img class="img-responsive" src="/assets/img/supporters/capital_square.png"></a>
-            </div>
-            <div class="col-sm-2"><a href="http://www.alt-i.org/index.php" target="_blank">
-                <img class="img-responsive" src="/assets/img/supporters/alti.png"></a>
-            </div>
-        </div>
+    	<div class="row" style="margin-top: 40px;">
+			<div class="col-lg-12 col-lg-offset-0">
+			    <div class="text-center">
+			        <div class="panel-footer">
+			            <h3>{{message "lang.keyboard-software-cta-title"}}</h3>
+			            <p>{{message "lang.keyboard-software-cta-text"}}</p>
+			            <div class="text-center">
+			                <a class="btn btn-success ms-2" href="https://writeyoruba.com/m-checkout" style="margin-top:10px"><i class="fa fa-apple"></i> {{message "lang.keyboard-software-cta-button-mac"}}</a>
+			                <a class="btn btn-success ms-2" href="https://writeyoruba.com/w-checkout" style="margin-top:10px"><i class="fa fa-windows"></i> {{message "lang.keyboard-software-cta-button-windows"}}</a>
+			            </div>
+			        </div>
+			    </div>
+			</div>
+    	</div>
 
         <div class="row" style="margin-top:40px">
             <div class="col-sm-4 col-sm-offset-2">
